--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.scss
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.scss
@@ -8,6 +8,13 @@
 }
 
 .edit-profile-container {
+  .profile-header {
+    .action-container {
+      &.back {
+        left: 0;
+      }
+    }
+  }
   .section-container {
     .info-container {
       .title {
