--- a/src/app/layout/profile/profile-education/profile-education.component.html
+++ b/src/app/layout/profile/profile-education/profile-education.component.html
@@ -17,11 +17,13 @@
         </span>
       </div>
     </div>
-    <div class="icon-add-new" *ngIf="!expandedEduSection" (click)="expandEducationSection(true)">
-      <img src="./assets/images/icons/icon_add_new.png">
-    </div>
-    <div class="icon-add-new" *ngIf="expandedEduSection" (click)="expandEducationSection(false)">
-      <img src="./assets/images/icons/icon_close_new.png">
+    <div *ngIf="editable">
+      <div class="icon-add-new" *ngIf="!expandedEduSection" (click)="expandEducationSection(true)">
+        <img src="./assets/images/icons/icon_add_new.png">
+      </div>
+      <div class="icon-add-new" *ngIf="expandedEduSection" (click)="expandEducationSection(false)">
+        <img src="./assets/images/icons/icon_close_new.png">
+      </div>
     </div>
   </div>
   <div class="add-new-item-container">
