--- a/src/app/layout/profile/profile-panel/profile-panel.component.scss
+++ b/src/app/layout/profile/profile-panel/profile-panel.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   .profile-container {
-    position: absolute;
+    position: fixed;
     right: -450px;
     top: 150px;
     width: 400px;
