- fixed style for profileSection

--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -28,7 +28,7 @@
     }
   }
   .profile-body {
-    height: calc(100vh - 200px);
+    height: calc(100% - 67px);
     overflow-y: auto;
     .section-container {
       padding: 15px 30px;
