--- a/src/app/layout/search/search-results/search-results.component.scss
+++ b/src/app/layout/search/search-results/search-results.component.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  .hide-loader{
+    display:none;
+  }
+
   @media (max-width: 1800px) {
     .search-results {
       width: 1200px;
