--- a/src/app/layout/search/search-results/search-results.component.html
+++ b/src/app/layout/search/search-results/search-results.component.html
@@ -3,8 +3,12 @@
     <div *ngFor="let result of searchResults">
       <dsod-search-result-item [topic]="result"></dsod-search-result-item>
     </div>
+    <div style="height: 100%; width: 100%; position: absolute;left: 0; top: 0;" [ngClass]="{'hide-loader':!isLoading}">
+         <ngx-spinner  bdColor="rgba(51, 51, 51, 0.8)"  size="medium" color="#fff" type="ball-scale-multiple"></ngx-spinner>
+    </div>
+   
   </div>
   <div class="search-pagination">
-    <pagination [totalItems]="36" [(ngModel)]="currentPage" (ngModelChange)="getPage()" (numPages)="smallnumPages = $event"></pagination>
+    <pagination [totalItems]="36" [(ngModel)]="currentPage" (ngModelChange)="getPage()" [itemsPerPage]=6></pagination>
   </div>
 </div>
