- fixed minor issues

--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -100,6 +100,7 @@
         <div class="body-wrapper">
           <dsod-profile-residency
             [residencies]="userProfile.profileResidency"
+            [editable]="true"
             (updateResidency)="updateResidency($event)">
           </dsod-profile-residency>
         </div>
