- fixed profileInfo validator

--- a/src/app/layout/profile/profile-experience/profile-experience.component.html
+++ b/src/app/layout/profile/profile-experience/profile-experience.component.html
@@ -101,7 +101,7 @@
         </div>
         <div class="date-picker-container">
           <span class="title">To</span>
-          <div class="input-group date-control" *ngIf="!isCurrenWorking">
+          <div class="input-group date-control" *ngIf="!isWorking">
             <input
               class="input-date-time"
               [container]="'body'"
