--- a/src/app/layout/profile/profile-address/profile-address.component.html
+++ b/src/app/layout/profile/profile-address/profile-address.component.html
@@ -70,6 +70,9 @@
           </ng-select>
         </div>
       </div>
+      <div class="new-item-container">
+        <button class="btn btn-primary btn-delete" (click)="deleteAddress()">Delete AddressInfo</button>
+      </div>
     </div>
   </div>
 </div>
