--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -136,7 +136,7 @@
               margin-left: 20px;
               font-size: 15px;
               padding: 10px 0 15px;
-              border-bottom: 1px solid $gray;
+              // border-bottom: 1px solid $gray;
               .title {
                 margin-bottom: 0;
                 font-size: 15px;
