made UI changes and fixes

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,7 @@
 <footer>
+  <go-top-button [animate]="true" [speed]="50" [acceleration]="2" [scrollDistance]="300" [classNames]="'scroll-top'">
+    <i class="fa fa-arrow-up"></i>
+  </go-top-button>
   <div class="container">
     <div class="row">
       <div class="col-xl-3 align-self-center">
