--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
@@ -19,6 +19,14 @@
       }
     }
   }
+
+  /deep/ dsod-topic {
+    .block-wrap {
+      .topic-block {
+        background: none;
+      }
+    }
+  }
 }
 
 .sponsors-ortho {
