--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -91,6 +91,24 @@
           }
         }
 
+        &.sub-menu-parent {
+          li {
+            a {
+              font-size: 16px;
+              color: $text-main;
+              padding: 7px 25px 7px 15px;
+              display: block;
+              transition: 0.2s all ease;
+              line-height: 20px;
+
+              &:hover {
+                background: $color-primary;
+                color: $color-white;
+              }
+            }
+          }
+        }
+
         .search-area {
           margin: 0 20px;
           display: flex;
@@ -178,4 +196,69 @@
 
 .bg-dark-scroll {
   background: rgba(0, 0, 0, 0.95);
+}
+
+// .dropdown:hover>.dropdown-menu {
+//   display: block;
+// }
+
+
+li.sub-menu-child>a::after {
+  content: "\f0da";
+  font-family: "FontAwesome";
+  font-size: 16px;
+  color: $text-main;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+li.sub-menu-child>a:hover::after {
+  color: $color-white;
+}
+
+.sub-menu-parent {
+  position: relative;
+}
+
+.sub-menu,
+.sub-menu-nested {
+  visibility: hidden;
+  /* hides sub-menu */
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  transform: translateY(-2em);
+  z-index: -1;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+  background: #fff;
+  border: 1px solid $text-main;
+  min-width: 180px;
+}
+
+.sub-menu-child {
+  position: relative;
+}
+
+.sub-menu-parent:focus .sub-menu,
+.sub-menu-parent:focus-within .sub-menu,
+.sub-menu-parent:hover .sub-menu,
+.sub-menu-child:focus .sub-menu-nested,
+.sub-menu-child:focus-within .sub-menu-nested,
+.sub-menu-child:hover .sub-menu-nested {
+  visibility: visible;
+  /* shows sub-menu */
+  opacity: 1;
+  z-index: 1;
+  transform: translateY(0%);
+  transition-delay: 0s, 0s, 0.3s;
+  /* this removes the transition delay so the menu will be visible while the other styles transition */
+}
+
+.sub-menu-nested {
+  left: 100%;
+  top: 0;
 }
