--- a/src/app/pages/article/components/article-content/article-content.component.scss
+++ b/src/app/pages/article/components/article-content/article-content.component.scss
@@ -1,41 +1,78 @@
  @import 'variables';
 
  .article-content {
-   p {
-     color: $text-main;
+   /deep/ p {
      font-size: 22px;
-     line-height: 35px;
-     margin-bottom: 25px;
+
+     &:nth-child(1) {
+       display: none;
+     }
+
+     &:nth-child(3) {
+
+       color: $text-main;
+       font-size: 22px;
+       line-height: 35px;
+       margin-bottom: 25px;
+
+       &:first-letter {
+         float: left;
+         font-size: 70px;
+         line-height: 60px;
+         padding-top: 4px;
+         padding-right: 8px;
+         padding-left: 3px;
+       }
+
+     }
+
+     a {
+       color: #0066cc;
+       line-height: 35px;
+       font-size: 22px;
+     }
+
+     &:last-child {
+       margin-bottom: 40px;
+     }
+
    }
 
-   p.sub-head:first-letter {
-     float: left;
-     font-size: 70px;
-     line-height: 60px;
-     padding-top: 4px;
-     padding-right: 8px;
-     padding-left: 3px;
+   /deep/ pre {
+     em {
+       font-size: 20px;
+     }
    }
 
-   h3.para-title {
-     font-size: 35px;
+   /deep/ h2 {
+     font-size: 30px;
      color: $color-primary;
+
+     b,
+     strong {
+       font-weight: 500;
+     }
    }
 
-   ul {
-     counter-reset: li;
+   /deep/ figcaption {
+     font-size: 22px;
+   }
+
+   /deep/ ol {
+     padding: 0 0 0 60px;
+     margin-top: 30px;
 
      li {
-       counter-increment: li;
        position: relative;
        color: $text-main;
        font-size: 22px;
        line-height: 35px;
-       padding: 0 50px;
+       padding: 0 50px 0 0;
        margin-bottom: 25px;
+       list-style: disc;
 
        &::before {
-         content: counter(li)".";
+         // content: counter(li)".";
          display: inline-block;
          font-size: 16px;
          left: 0;
