--- a/src/app/pages/article/components/article-media/article-media.component.html
+++ b/src/app/pages/article/components/article-media/article-media.component.html
@@ -9,8 +9,8 @@
   <div class="row">
     <div class="col-lg-10">
       <h2>{{content.title}}:</h2>
-      <h3>The Morning Huddle</h3>
-      <span class="by">by DSODentist</span>
+      <!-- <h3>The Morning Huddle</h3> -->
+      <span class="by">by {{content.author.fullName}}</span>
     </div>
     <div class="col-lg-2">
       <dsod-content-actions></dsod-content-actions>
@@ -18,7 +18,6 @@
   </div>
 </div>
 <div class="article-thumbnail" *ngIf="content">
-  <img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{content.featuredMediaId}}"
-    class="img-fluid" alt="">
-  <p><b>Figure.</b>The morning huddle is an important operational 'must do' for the entire team.</p>
+  <img src={{content.featuredMedia.code.originalUrl}} class="img-fluid" alt="">
+  <p><b>Figure.</b>{{content.title}}</p>
 </div>
