--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -2,15 +2,17 @@
   <div class="row">
     <div class="col-md-5">
       <div class="latest-block-thumbnail">
-        <img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{latestTopic.featuredMediaId}}"
-          class="img-fluid" alt="Feautred Thumbnail Large" (click)="navigateTo(latestTopic)">
+        <img src={{latestTopic.featuredMedia.code.originalUrl}} class="img-fluid" alt="Feautred Thumbnail Large"
+          (click)="navigateTo(latestTopic)">
         <a href="javascript:void(0)" (click)="navigateTo(latestTopic)" class="read-about">
-          <img src="assets/images/article-icon.png" alt="">
+          <img *ngIf="latestTopic.contentTypeName=='Articles'" src="assets/images/article-icon.png" alt="">
+          <img *ngIf="latestTopic.contentTypeName=='Videos'" src="assets/images/youtube-icon.png" alt="">
+          <img *ngIf="latestTopic.contentTypeName=='Podcasts'" src="assets/images/podcast-icon.png" alt="">
         </a>
       </div>
     </div>
     <div class="col-md-7">
-      <dsod-topic [topic]="latestTopic" [contentLenght]=200 [showImage]="false" [showHeader]="true">
+      <dsod-topic [topic]="latestTopic" [showImage]="false" [showHeader]="true" styleFor="content-lg">
       </dsod-topic>
     </div>
   </div>
