--- a/src/app/pages/home/components/podcast-items/podcast-items.component.html
+++ b/src/app/pages/home/components/podcast-items/podcast-items.component.html
@@ -1,3 +1,5 @@
 <ul>
-  <li *ngFor="let podcast of podcasts; let i =index"><a [routerLink]="['./podcast',podcast.id]">{{i+1}}.&nbsp;{{podcast.title}}<span>36:19</span></a></li>
+  <li *ngFor="let podcast of podcasts; let i =index"><a [routerLink]="['./podcast',podcast.id]">
+      <div>{{i+1}}.</div>{{podcast.title}}<span>36:19</span>
+    </a></li>
 </ul>
