--- a/src/app/pages/home/components/podcasts/podcasts.component.html
+++ b/src/app/pages/home/components/podcasts/podcasts.component.html
@@ -5,10 +5,10 @@
       <h3>DISCOVER NEW RESOURCES</h3>
       <h4>Check out what is popular in <span>DSODentist</span> today!</h4>
     </div>
-    <div class="podcasts-tabs d-flex align-items-center" *ngIf="podcasts">
+    <div class="podcasts-tabs d-flex align-items-center">
       <h3 class="podcasts-title">Podcasts</h3>
       <tabset>
-        <tab heading="New" class="mt-2" (select)="onSelect($event)">
+        <tab heading="New" class="mt-2">
           <a href="javascript:void(0)" class="pod-left-control" (click)="updateAuthors()">
             <img src="assets/images/arrow-left.png" alt="">
           </a>
@@ -29,7 +29,7 @@
                 </div>
               </div>
               <div class="podcasts-list">
-                <dsod-podcast-items [podcasts]="podcasts"></dsod-podcast-items>
+                <dsod-podcast-items [podcasts]="podcasts$ | async"></dsod-podcast-items>
               </div>
             </div>
             <div class="col-xl-6">
