--- a/src/app/pages/podcast/components/podcast-content/podcast-content.component.scss
+++ b/src/app/pages/podcast/components/podcast-content/podcast-content.component.scss
@@ -1,50 +1,113 @@
 @import 'variables';
 
 .speakers-content {
-  .speakers-block {
-    margin-bottom: 60px;
+  /deep/ audio {
+    display: none;
 
-    h2 {
-      font-size: 35px;
-      font-family: $Arial;
-      margin-bottom: 45px;
+  }
+
+  /deep/ p {
+    font-size: 22px;
+    line-height: 36px;
+
+
+    a {
+      color: $deep-cerulean;
     }
 
-    p {
+    &:nth-child(1) {
+      display: none;
+    }
+
+    &:nth-child(3) {
+      margin-bottom: -50px;
+    }
+  }
+
+  h2 {
+    font-size: 35px;
+    font-family: $Arial;
+    margin-bottom: 45px;
+  }
+
+  /deep/ h2 {
+    margin: 25px 0;
+    font-size: 24px;
+    font-family: $Arial;
+    font-style: italic;
+  }
+
+  /deep/ ol {
+    padding: 0 0 0 60px;
+    margin-top: 30px;
+    counter-reset: li;
+
+    li {
+      position: relative;
+      color: $text-main;
       font-size: 22px;
-      line-height: 36px;
+      line-height: 35px;
+      padding: 0 50px;
+      margin-bottom: 25px;
+      counter-increment: li;
+      // list-style: disc;
 
-      a {
-        color: $deep-cerulean;
+      &::before {
+        content: counter(li)".";
+        display: inline-block;
+        font-size: 16px;
+        left: 0;
+        line-height: 26px;
+        position: absolute;
+        top: 0;
+        color: $color-primary;
+        font-size: 22px;
+        line-height: 35px;
+        font-weight: 700;
       }
-    }
 
-    ul {
-      li {
-        padding: 7px 0;
-
-        a {
-          font-size: 27px;
-          color: $text-main;
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-align: center;
-          -ms-flex-align: center;
-          align-items: center;
-          line-height: 33px;
-
-          img {
-            margin-right: 15px;
-          }
-
-          span {
-            margin-left: 15px;
-          }
-        }
+      i {
+        color: $color-primary;
       }
     }
   }
+
+  /deep/ ul {
+    padding: 0 0 0 60px;
+    margin-top: 30px;
+    counter-reset: li;
+
+    li {
+      position: relative;
+      color: $text-main;
+      font-size: 22px;
+      line-height: 35px;
+      padding: 0 50px;
+      margin-bottom: 25px;
+      counter-increment: li;
+      // list-style: disc;
+
+      &::before {
+        content: counter(li)".";
+        display: inline-block;
+        font-size: 16px;
+        left: 0;
+        line-height: 26px;
+        position: absolute;
+        top: 0;
+        color: $color-primary;
+        font-size: 22px;
+        line-height: 35px;
+        font-weight: 700;
+      }
+
+      i {
+        color: $color-primary;
+      }
+    }
+  }
+
+
 }
 
 .podcasts-list {
