--- a/src/app/pages/video/components/video-content/video-content.component.scss
+++ b/src/app/pages/video/components/video-content/video-content.component.scss
@@ -2,43 +2,62 @@
 
 :host {
   .video-content-inner {
-    p {
-      color: $text-main;
-      font-size: 22px;
-      line-height: 35px;
-      margin-bottom: 25px;
-    }
+    /deep/ p {
+      font-size: 26px;
 
-    p.sub-head:first-letter {
-      float: left;
-      font-size: 70px;
-      line-height: 60px;
-      padding-top: 4px;
-      padding-right: 8px;
-      padding-left: 3px;
-    }
+      &:nth-child(1) {
+        display: none;
+      }
 
-    h3.para-title {
-      font-size: 35px;
-      color: $color-primary;
-    }
+      &:nth-child(4) {
 
-    h4 {
-      font-weight: 700;
-      font-size: 22px;
-    }
+        color: $text-main;
+        font-size: 22px;
+        line-height: 35px;
+        margin-bottom: 25px;
 
-    >span {
-      display: block;
+        &:first-letter {
+          float: left;
+          font-size: 70px;
+          line-height: 60px;
+          padding-top: 4px;
+          padding-right: 8px;
+          padding-left: 3px;
+        }
+
+      }
 
       a {
         color: #0066cc;
         line-height: 35px;
         font-size: 22px;
       }
+
+      &:last-child {
+        margin-bottom: 40px;
+      }
+
     }
 
-    ul {
+
+    /deep/ h2 {
+      font-size: 30px;
+      color: $color-primary;
+
+      &:nth-of-type(2) {
+        font-weight: 700;
+        font-size: 22px;
+        color: $text-main;
+      }
+    }
+
+    >span {
+      display: block;
+
+
+    }
+
+    /deep/ ul {
       padding: 0 0 0 60px;
       margin-top: 30px;
 
