--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -1,48 +1,53 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xl-9">
-      <div class="video-content p-t-115">
-        <div class="top-head d-flex justify-content-between">
-          <ul>
-            <li>Education /</li>
-            <li>Practice Management</li>
-          </ul>
-          <div><img src="assets/images/gsk-icon-sm.png">&nbsp;Sponsored content from GlaxoSmithKline</div>
-          <dsod-rating></dsod-rating>
+<div class="page-content">
+  <div class="container" *ngIf="(pageContent$ | async)">
+    <div class="row">
+      <div class="col-xl-9">
+        <div class="video-content">
+          <div class="top-head d-flex justify-content-between">
+            <ul>
+              <li>Education /</li>
+              <li>Practice Management</li>
+            </ul>
+            <div><img src="assets/images/gsk-icon-sm.png">&nbsp;Sponsored content from GlaxoSmithKline</div>
+            <dsod-rating></dsod-rating>
+          </div>
+          <div class="video-header">
+            <div class="row">
+              <div class="col-lg-10">
+                <dsod-video-title [content]="pageContent$ | async"></dsod-video-title>
+              </div>
+              <div class="col-lg-2">
+                <dsod-content-actions></dsod-content-actions>
+              </div>
+            </div>
+          </div>
+          <dsod-video-player [content]="(pageContent$ | async)?.content"></dsod-video-player>
+          <dsod-video-content [content]="(pageContent$ | async)?.content"></dsod-video-content>
         </div>
-        <div class="video-header">
+        <div class="related-content" *ngIf="(pageContent$ | async)?.relativeTopicList">
+          <h2 class="section-title">Related Content</h2>
           <div class="row">
-            <div class="col-lg-10">
-              <dsod-video-title [content]="pageContent$ | async"></dsod-video-title>
-            </div>
-            <div class="col-lg-2">
-              <dsod-content-actions></dsod-content-actions>
+            <div class="col-lg-4" *ngFor="let topic of (pageContent$ | async)?.relativeTopicList">
+              <dsod-related-content [content]="topic" [contentTypeName]="(pageContent$ | async)?.contentTypeName"></dsod-related-content>
             </div>
           </div>
         </div>
-        <dsod-video-player [content]="pageContent$ | async"></dsod-video-player>
-        <dsod-video-content [content]="pageContent$ | async"></dsod-video-content>>
+        <div *ngIf="isLoggedIn">
+          <dsod-article-reviews [content]="pageContent$ | async"></dsod-article-reviews>
+        </div>
       </div>
-      <div class="related-content">
-        <h2 class="section-title">Related Content</h2>
-        <div class="row">
-          <div class="col-lg-4" *ngFor="let topic of trendingTopics$ |async">
-            <dsod-topic [topic]="topic" [contentLenght]=0 [showImage]="true" [showHeader]="true" styleFor="content-small"></dsod-topic>
+
+      <div class="col-xl-3">
+        <section class="trending-videos" *ngIf="(trendingTopics$ |async)?.length">
+          <h2 class="section-title">Trending Topics</h2>
+          <div *ngFor="let topic of trendingTopics$ |async">
+            <dsod-topic [topic]="topic" [showImage]="true" [showHeader]="true" styleFor="content-sm"></dsod-topic>
           </div>
-        </div>
+          <dsod-sponsored-ad></dsod-sponsored-ad>
+        </section>
       </div>
     </div>
 
-    <div class="col-xl-3 p-t-115">
-      <section class="trending-videos">
-        <h2 class="section-title">Trending Topics</h2>
-        <div *ngFor="let topic of trendingTopics$ |async">
-          <dsod-topic [topic]="topic" [contentLenght]=170 [showImage]="true" [showHeader]="true" styleFor="content-small"></dsod-topic>
-        </div>
-        <dsod-sponsored-ad></dsod-sponsored-ad>
-      </section>
-    </div>
+
   </div>
-
-
 </div>
