--- a/src/app/shared/components/reviews/reviews.component.html
+++ b/src/app/shared/components/reviews/reviews.component.html
@@ -1,4 +1,4 @@
-<div class="reviews p-t-115">
+<div class="reviews pt-5">
   <div class="reviews-header">
     <h3>Finished the content?</h3>
     <h4 (click)="openAddReviewModal()">Add your review</h4>
