--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,9 @@ ul li {
   padding-bottom: 30px;
 }
 
+.page-content {
+  padding-top: 160px;
+}
 
 @media only screen and (min-width:1366px) {
   .container {
