--- a/src/app/pages/article/components/article-content/article-content.component.scss
+++ b/src/app/pages/article/components/article-content/article-content.component.scss
@@ -4,6 +4,11 @@
    /deep/ p {
      font-size: 22px;
 
+     >img {
+       width: 100%;
+       height: auto;
+     }
+
      &:nth-child(1) {
        display: none;
      }
@@ -23,7 +28,6 @@
          padding-right: 8px;
          padding-left: 3px;
        }
-
      }
 
      a {
@@ -72,7 +76,38 @@
        list-style: disc;
 
        &::before {
-         // content: counter(li)".";
+         display: inline-block;
+         font-size: 16px;
+         left: 0;
+         line-height: 26px;
+         position: absolute;
+         top: 0;
+         color: $color-primary;
+         font-size: 22px;
+         line-height: 35px;
+         font-weight: 700;
+       }
+
+       i {
+         color: $color-primary;
+       }
+     }
+   }
+
+   /deep/ ul {
+     padding: 0 0 0 60px;
+     margin-top: 30px;
+
+     li {
+       position: relative;
+       color: $text-main;
+       font-size: 22px;
+       line-height: 35px;
+       padding: 0 50px 0 0;
+       margin-bottom: 25px;
+       list-style: disc;
+
+       &::before {
          display: inline-block;
          font-size: 16px;
          left: 0;
